SQL Advanced Joins and Performance Tuning

--- a/Quiz7_SQL.ipynb
+++ b/Quiz7_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz7_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOsNbd++5ypOkapR1Z5gTGN",
+      "authorship_tag": "ABX9TyPSLW4y6korC08BC6sUvNsu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,30 @@
         "FROM accounts a\n",
         "LEFT JOIN sales_reps s\n",
         "ON a.sales_rep_id = s.id AND a.primary_poc < s.name\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gNhyoFtB7IFD"
+      },
+      "source": [
+        "SELECT w1.id AS w1_id,\n",
+        "       w1.account_id AS w1_account_id,\n",
+        "       w1.occurred_at AS w1_occurred_at,\n",
+        "       w1.channel AS w1_channel,\n",
+        "       w2.id AS w2_id,\n",
+        "       w2.account_id AS w2_account_id,\n",
+        "       w2.occurred_at AS w2_occurred_at,\n",
+        "       w2.channel AS w2_channel\n",
+        "  FROM web_events w1\n",
+        " LEFT JOIN web_events w2\n",
+        "   ON w1.account_id = w2.account_id\n",
+        "  AND w2.occurred_at > w1.occurred_at\n",
+        "  AND w2.occurred_at <= w1.occurred_at + INTERVAL '1 day'\n",
+        "ORDER BY w1.account_id, w1.occurred_at"
       ],
       "execution_count": null,
       "outputs": []
