SQL Advanced Joins and Performance Tuning

--- a/Quiz7_SQL.ipynb
+++ b/Quiz7_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz7_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSLW4y6korC08BC6sUvNsu",
+      "authorship_tag": "ABX9TyM63EXAn1D63gszNXtt42Gr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,23 @@
         "  AND w2.occurred_at > w1.occurred_at\n",
         "  AND w2.occurred_at <= w1.occurred_at + INTERVAL '1 day'\n",
         "ORDER BY w1.account_id, w1.occurred_at"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z0xtoghJ7fNd"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM accounts\n",
+        "\n",
+        "UNION ALL\n",
+        "\n",
+        "SELECT *\n",
+        "FROM accounts;"
       ],
       "execution_count": null,
       "outputs": []
