--- a/Lesson_SQL.ipynb
+++ b/Lesson_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMu5oK2k6K8/E5WBNXUTnNH",
+      "authorship_tag": "ABX9TyM0aGEv7hRfBPOP6kuVneDz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,6 +67,35 @@
         "THEN 'Between 1000 and 2000' ELSE 'Less than 1000' END AS catogery, COUNT(*) AS num\n",
         "FROM orders\n",
         "GROUP BY 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QALDBx3czJSe"
+      },
+      "source": [
+        "WITH t1 AS (SELECT r.name AS region, s.name AS    name, SUM(o.total_amt_usd) AS total\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "JOIN region r\n",
+        "On r.id=s.region_id\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC),\n",
+        "\n",
+        "t2 AS (SELECT region, MAX(total) AS total_amt\n",
+        "       FROM t1\n",
+        "       GROUP BY 1)\n",
+        "       \n",
+        "SELECT t1.name, t2.region, t2.total_amt\n",
+        "FROM t1\n",
+        "JOIN t2\n",
+        "ON t2.region=t1.region AND t2.total_amt=t1.total;"
       ],
       "execution_count": null,
       "outputs": []
