--- a/Lesson_SQL.ipynb
+++ b/Lesson_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZogr1djO678W6NOlAttKa",
+      "authorship_tag": "ABX9TyOel3axHjWmYiqAnKTVpDVa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,59 @@
         "      JOIN region r\n",
         "      On r.id=s.region_id\n",
         "      GROUP BY 1)sub);"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0OJzMJGTV0_Y"
+      },
+      "source": [
+        "WITH t1 AS (SELECT r.name AS region,                     SUM(o.total_amt_usd) AS total\n",
+        "      FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1),\n",
+        "      \n",
+        "t2 AS (SELECT MAX(total)\n",
+        "       FROM t1)\n",
+        "       \n",
+        " SELECT r.name, COUNT(o.total) as total_count\n",
+        "FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1\n",
+        "HAVING SUM(o.total_amt_usd) = (SELECT * FROM t2);"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LOWNQcfIWFGi"
+      },
+      "source": [
+        "WITH t1 AS (SELECT AVG(o.total_amt_usd) as tot_avg\n",
+        "FROM orders o),\n",
+        "                     \n",
+        "t2 AS (SELECT o.account_id, AVG(o.total_amt_usd) as avg\n",
+        "FROM orders o\n",
+        "GROUP BY 1\n",
+        "HAVING AVG(total_amt_usd)> (SELECT tot_avg FROM t1))\n",
+        "       \n",
+        "SELECT AVG(avg)\n",
+        "FROM t2;      "
       ],
       "execution_count": null,
       "outputs": []
