--- a/Lesson_SQL.ipynb
+++ b/Lesson_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOel3axHjWmYiqAnKTVpDVa",
+      "authorship_tag": "ABX9TyM/LRt3b8GMB9iXl+GLMfYY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,18 +27,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_ayagnLDPatL"
+        "id": "oi-1GOCgZNC3"
       },
       "source": [
-        "SELECT r.name AS region, SUM(o.total_amt_usd) AS total\n",
-        "      FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1"
+        "SELECT LEFT(primary_poc, STRPOS(primary_poc, ' ') -1 ) first_name, \n",
+        "RIGHT(primary_poc, LENGTH(primary_poc) - STRPOS(primary_poc, ' ')) last_name\n",
+        "FROM accounts;"
       ],
       "execution_count": null,
       "outputs": []
@@ -46,104 +40,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5DIUcdZwPb8q"
+        "id": "zdRUmZf8auWe"
       },
       "source": [
-        "SELECT MAX(total)\n",
-        " FROM\n",
-        "   (SELECT r.name AS region, SUM(o.total_amt_usd) AS total\n",
-        "      FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1)sub"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GLmaTU63P3KY"
-      },
-      "source": [
-        "SELECT r.name, COUNT(o.total) as total_count\n",
-        "FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1\n",
-        "HAVING SUM(o.total_amt_usd)=      \n",
-        "(SELECT MAX(total)\n",
-        " FROM\n",
-        "   (SELECT r.name AS region,               SUM(o.total_amt_usd) AS total\n",
-        "      FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1)sub);"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0OJzMJGTV0_Y"
-      },
-      "source": [
-        "WITH t1 AS (SELECT r.name AS region,                     SUM(o.total_amt_usd) AS total\n",
-        "      FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1),\n",
-        "      \n",
-        "t2 AS (SELECT MAX(total)\n",
-        "       FROM t1)\n",
-        "       \n",
-        " SELECT r.name, COUNT(o.total) as total_count\n",
-        "FROM orders o\n",
-        "      JOIN accounts a\n",
-        "      ON o.account_id = a.id\n",
-        "      JOIN sales_reps s\n",
-        "      ON a.sales_rep_id = s.id\n",
-        "      JOIN region r\n",
-        "      On r.id=s.region_id\n",
-        "      GROUP BY 1\n",
-        "HAVING SUM(o.total_amt_usd) = (SELECT * FROM t2);"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LOWNQcfIWFGi"
-      },
-      "source": [
-        "WITH t1 AS (SELECT AVG(o.total_amt_usd) as tot_avg\n",
-        "FROM orders o),\n",
-        "                     \n",
-        "t2 AS (SELECT o.account_id, AVG(o.total_amt_usd) as avg\n",
-        "FROM orders o\n",
-        "GROUP BY 1\n",
-        "HAVING AVG(total_amt_usd)> (SELECT tot_avg FROM t1))\n",
-        "       \n",
-        "SELECT AVG(avg)\n",
-        "FROM t2;      "
+        "SELECT primary_poc, CONCAT(first_name,'.',last_name,'@',name,'.com') AS email_address\n",
+        "FROM\n",
+        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
+        "  FROM accounts)query;  "
       ],
       "execution_count": null,
       "outputs": []
