--- a/Lesson_SQL.ipynb
+++ b/Lesson_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/LRt3b8GMB9iXl+GLMfYY",
+      "authorship_tag": "ABX9TyN02DIffvH2rB2E3fsrPp66",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,8 +45,37 @@
       "source": [
         "SELECT primary_poc, CONCAT(first_name,'.',last_name,'@',name,'.com') AS email_address\n",
         "FROM\n",
-        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
+        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, \n",
+        "   RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
         "  FROM accounts)query;  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O4kUX7AebIlG"
+      },
+      "source": [
+        "SELECT date AS original_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2)) AS formatted_date, \n",
+        "(SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2))::DATE AS cleaned_date           \n",
+        "FROM sf_crime_data;                               "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kTEfD4t6bZP0"
+      },
+      "source": [
+        "SELECT COALESCE(a.id, a.id)AS filled_id, a.name, a.website, a.lat, a.long, a.primary_poc, a.sales_rep_id, o.*\n",
+        "FROM accounts a\n",
+        "LEFT JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "WHERE o.total IS NULL;\n"
       ],
       "execution_count": null,
       "outputs": []
