--- a/Lesson_SQL.ipynb
+++ b/Lesson_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lesson1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN02DIffvH2rB2E3fsrPp66",
+      "authorship_tag": "ABX9TyPn9vpA4TnlZRDvEzPlbBIq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oi-1GOCgZNC3"
+        "id": "XOwivkL_JLiQ"
       },
       "source": [
-        "SELECT LEFT(primary_poc, STRPOS(primary_poc, ' ') -1 ) first_name, \n",
-        "RIGHT(primary_poc, LENGTH(primary_poc) - STRPOS(primary_poc, ' ')) last_name\n",
-        "FROM accounts;"
+        "SELECT standard_amt_usd, DATE_TRUNC('year',occurred_at) as year, \n",
+        "SUM(standard_amt_usd) OVER (PARTITION BY DATE_TRUNC('year',occurred_at) \n",
+        "ORDER BY occurred_at) as running_total\n",
+        "FROM orders;"
       ],
       "execution_count": null,
       "outputs": []
@@ -40,14 +41,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zdRUmZf8auWe"
+        "id": "wrpoxcdPJ79K"
       },
       "source": [
-        "SELECT primary_poc, CONCAT(first_name,'.',last_name,'@',name,'.com') AS email_address\n",
-        "FROM\n",
-        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, \n",
-        "   RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
-        "  FROM accounts)query;  "
+        "SELECT id,\n",
+        "       account_id,\n",
+        "       DATE_TRUNC('year',occurred_at) AS year,\n",
+        "       DENSE_RANK() OVER account_year_window AS dense_rank,\n",
+        "       total_amt_usd,\n",
+        "       SUM(total_amt_usd) OVER account_year_window AS sum_total_amt_usd,\n",
+        "       COUNT(total_amt_usd) OVER account_year_window AS count_total_amt_usd,\n",
+        "       AVG(total_amt_usd) OVER account_year_window AS avg_total_amt_usd,\n",
+        "       MIN(total_amt_usd) OVER account_year_window AS min_total_amt_usd,\n",
+        "       MAX(total_amt_usd) OVER account_year_window AS max_total_amt_usd\n",
+        "FROM orders\n",
+        "WINDOW account_year_window AS  (PARTITION BY account_id ORDER BY DATE_TRUNC('year',occurred_at))"
       ],
       "execution_count": null,
       "outputs": []
@@ -55,27 +63,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O4kUX7AebIlG"
+        "id": "YerQI7ovKI82"
       },
       "source": [
-        "SELECT date AS original_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2)) AS formatted_date, \n",
-        "(SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2))::DATE AS cleaned_date           \n",
-        "FROM sf_crime_data;                               "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kTEfD4t6bZP0"
-      },
-      "source": [
-        "SELECT COALESCE(a.id, a.id)AS filled_id, a.name, a.website, a.lat, a.long, a.primary_poc, a.sales_rep_id, o.*\n",
-        "FROM accounts a\n",
-        "LEFT JOIN orders o\n",
-        "ON a.id = o.account_id\n",
-        "WHERE o.total IS NULL;\n"
+        "SELECT account_id, occurred_at, standard_qty, NTILE(4)OVER(PARTITION BY account_id ORDER BY standard_qty) as quartile\n",
+        "FROM orders \n",
+        "ORDER BY account_id DESC;\n"
       ],
       "execution_count": null,
       "outputs": []
